Adjust to mobile

--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,8 @@
     -->
 
     <!-- Page styles -->
-    <link rel="stylesheet" href="styles/main.css">
+    <!-- inline app/styles/main.css -->
+    <link inline rel="stylesheet" href="styles/main.css">
   </head>
   <body onload="onLoad()">
     <main class="header centered">
@@ -40,7 +41,7 @@
         <form action="//styrax.us9.list-manage.com/subscribe/post?u=ebdd5be105335dd8b0fb47783&amp;id=c340944560" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
           <div id="mc_embed_signup_scroll">
 
-            <input type="email" value="" name="EMAIL" class="required email" placeholder="Enter your email address" id="mce-EMAIL">
+            <input type="email" value="" name="EMAIL" class="required email" placeholder="Enter your email" id="mce-EMAIL">
             <div id="mce-responses" class="clear">
               <div class="response" id="mce-error-response" style="display:none"></div>
               <div class="response" id="mce-success-response" style="display:none"></div>
@@ -55,12 +56,8 @@
 
       <!-- Go to www.addthis.com/dashboard to customize your tools -->
       <div class="addthis_sharing_toolbox styrax-share"></div>
-      <a href="mailto:info@styrax.co?Subject=Contact%20Styrax">Contact Us</a>
+      <a href="mailto:info@styrax.co?Subject=Contact%20Styrax">Contact Us (info@styrax.co)</a>
     </main>
-
-    <!-- build:js scripts/main.min.js -->
-    <script src="scripts/main.js"></script>
-    <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
